[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/event_type/battle/battle_grid.gd" type="Script" id=1]

[node name="battle_grid" type="Node2D"]
script = ExtResource( 1 )
x_start = 64
y_start = 800
offset = 64
y_offset = 2
max_score = 300
piece_value = 10
current_counter_value = 1
is_moves = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="refill_timer" to="." method="_on_refill_timer_timeout"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="." method="_on_collapse_timer_timeout"]
